# cf-scripts

./: .codecov.yml  .codespellignorelines  .codespellignorewords  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  00-find_feedstocks.py  00.sh  00.xsh  01-make_graph.py  01.sh  01.xsh  02-graph_upstream.py  02.sh  02.xsh  03-auto_tick.xsh  03.sh  03.xsh  AGENTS.md  CLAUDE.md  Dockerfile  License  MANIFEST.in  README.md  bot.xsh  circle.xsh  codecov.yml  conda-lock.yml  configure_workers.xsh  do_types.py  environment.yml  find_cycles.py  github_deploy_key_regro_cf_scripts.enc  migrate_to_hash.py  mypy.ini  pred_test.py  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: bot-audit.yml  bot-bot.yml  bot-cache.yml  bot-delete-old-runs.yml  bot-events.yml  bot-feedstocks.yml  (+19 more)
.mitmproxy/: .gitignore  README.md
autotick-bot/: LICENSE  README.md  bump_bot_team.py  compute_next_version.py  condarc  delete_old_runs.py  install_bot_code.sh  local_setup.sh  please.go  release.py  relock_me.py  requirements.txt  stop_me_if_needed.py  switch.xsh
conda_forge_tick/: __init__.py  all_feedstocks.py  audit.py  auto_tick.py  auto_tick.xsh  backend_settings.py  cf_tick_schema.json  chaindb.py  chained_db.py  cli.py  cli.pyi  cli.xsh  cli2.py  cli_context.py  config_schema.py  container_cli.py  contexts.py  depfinder_api.py  deploy.py  dynamo_models.py  env_management.py  executors.py  feedstock_parser.py  git_utils.py  git_utils.xsh  git_xonsh_utils.pyi  git_xonsh_utils.xsh  graph_inspec.py  hashing.py  import_to_pkg.py  lazy_json_backends.py  lazy_json_backups.py  make_graph.py  make_migrators.py  mamba_solver.py  mappings.py  migrate_update_version.py  migration_runner.py  migrators.py  migrators.xsh  (+25 more)
dev/: test_lazy_json_github.ipynb
docker/: entrypoint  entrypoint_source  install_cmds  run_bot_task.py
docs/: conf.py  github_actions_infrastructure.rst  index.rst  migrators.rst  runner_allocation.md  usage.rst  version_migrator.rst
planning/: distributed_bot.md
requirements/: run  test
scripts/: bot.xsh  build_graph.xsh  conda-forge-tick  cut_pr_json.py  find_cycles.py  fix_bot_rerun_20200306.py  graph_inspec.py  migrate_fzd_graph3.py  migrate_to_bot_rerun.py  migrate_to_hash.py  migrate_to_json_graph.py  migrate_to_lzjson.py  migrate_to_unify_pred.py  pred_test.py  status.py  top_dependencies.py
tests/: conftest.py  fake_lazy_json.py  test_audit.py  test_auto_tick.py  test_build_number.py  test_cdt.py  test_cfyaml_cleanup_migrator.py  test_cli.py  test_config_schema.py  test_container_tasks.py  test_contexts.py  test_cos7_config_migrator.py  test_cross_compile.py  test_deploy.py  test_duplicate_lines_cleanup_migrator.py  test_env_management.py  test_executors.py  test_extra_jinja2_keys_migrator.py  test_feedstock_parser.py  test_flang.py  test_git_utils.py  test_graph1.pkl  test_graph3.pkl  test_hashing.py  test_jinja2_vars_cleanup.py  test_jpeg_libjpeg_turbo.py  test_lazy_json_backends.py  test_lazy_json_backups.py  test_libboost.py  test_libjpeg_turbo.py  test_license_migrator.py  test_make_graph.py  test_make_migrators.py  test_mamba_solvable.py  test_matplotlib_base.py  test_max_ver_migrator.py  test_migration_runner.py  test_migration_yaml_migration.py  test_migrator_nvtools.py  test_migrator_to_json.py  (+38 more)
tests_integration/: README.md  clear_runner.sh  collect_test_scenarios.py  mitmproxy_setup_wizard.sh  mock_proxy_start.sh  mock_server_addon.py  setup_repositories.py  shared.py  step_prepare.py  step_validate.py  test_integration.py  test_request.py
(+516 files in other folders)
